# Qwen3TTS-app

./: .gitignore  README.md  SPEC.md  config.example.yaml  plan.md  pyproject.toml  requirements-asr.txt  requirements.txt  setup_asr.bat  setup_asr.sh
app/: __init__.py  main.py
app/api/: __init__.py  asr_client.py  ollama_client.py  qwen3_client.py
app/audio/: __init__.py  concatenator.py  exporter.py  player.py
app/core/: __init__.py  app_logger.py  auto_punctuation.py  config.py  drafts.py  duration_estimator.py  history.py  i18n.py  model_manager.py  presets.py  recent_texts.py  server_manager.py  ssml.py  text_templates.py
app/ui/: __init__.py  asr_tab.py  clone_tab.py  edit_tab.py  error_console.py  history_tab.py  main_window.py  settings_tab.py  text_tab.py  theme.py  waveform_widget.py
docs/: architecture.md
graphify-out/: GRAPH_REPORT.md  graph.json
scripts/: asr_server.py  asr_worker.py  download_models.py  llm_server.py  setup.py  start.py  tts_server.py  tts_worker.py
tests/: test_app_logger.py  test_auto_punctuation.py  test_chinese_converter.py  test_concatenator.py  test_config.py  test_drafts.py  test_duration_estimator.py  test_history.py  test_i18n.py  test_model_manager.py  test_presets.py  test_recent_texts.py  test_server_manager.py  test_ssml.py  test_text_templates.py  test_v050_features.py
